--- a/assets/style/contactUs.css
+++ b/assets/style/contactUs.css
@@ -1,3 +1,9 @@
-.contactUs-body{
-    height:85vh;
+
+body , html{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+footer{
+    height: 100%;
 }
